Fully implement scripting from command line
Bug ID: a88/0df. Both Python and Javascript scripts can now be run
from the command line, and Jython can be installed from the command
line. Not closing the bug yet because the new functionality is not
yet fully documented.